# LinkedInLearning

./: README.md
Ex_Files_Learning_SOLID_Programming_Principles/Exercise Files/: README.md  pyproject.toml  requirements.txt
Ex_Files_Learning_SOLID_Programming_Principles/Exercise Files/ch00/: ex_00_02.py  temp.csv
Ex_Files_Learning_SOLID_Programming_Principles/Exercise Files/ch01/: ex_01_01.py  ex_01_02.py  ex_01_03.py  ex_01_04.py  ex_01_05.py  temp.csv  test_ch01.py
Ex_Files_Learning_SOLID_Programming_Principles/Exercise Files/ch02/: APP.toml  ex_02_01.py  ex_02_02.py  ex_02_03.py  ex_02_04.py  ex_02_05.py  temp.json  temp.md
Ex_Files_Learning_SOLID_Programming_Principles/Exercise Files/ch03/: ex03.toml  ex03_config.py  ex03_lib.py  ex_03_01.py  ex_03_02.py  ex_03_03.py  ex_03_04.py  ex_03_05.py  ex_03_06.py  test_ch03.py
Ex_Files_Learning_SOLID_Programming_Principles/Exercise Files/ch04/: README.md
Ex_Files_Learning_SOLID_Programming_Principles/Exercise Files/ch05/: data.csv  ex_05_01.py  test_ch05.py
Ex_Files_Learning_SOLID_Programming_Principles/Exercise Files/ch06/: README.md
